--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #121212;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -36,7 +37,7 @@ code {
 
 .recommended-tracks li button {
   background-color: #1ed760;
-  color: #fff;
+  color: black;
   padding: 5px 10px;
   border: none;
   border-radius: 4px;
@@ -65,6 +66,7 @@ code {
   padding: 20px;
   width: 200px;
   text-align: center;
+  color: black;
 }
 
 .profile-image {
@@ -98,14 +100,42 @@ code {
   margin-bottom: 20px;
 }
 
-.shuffle-button {
-  padding: 10px 20px;
-  background-color: #1DB954;
-  color: #fff;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
+
+.playlist-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #1c1c1c;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.playlist-header {
+  text-align: center;
+  font-size: 2em;
   margin-bottom: 20px;
+  color: #1db954;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+  color: #aaaaaa;
+}
+
+input[type="range"] {
+  width: 100%;
+  margin-top: 5px;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  background-color: #333333;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
 }
 
 .track-list {
@@ -116,13 +146,17 @@ code {
 .track-item {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #333333;
+  border-radius: 5px;
 }
 
 .album-cover {
-  width: 100px;
-  height: 100px;
+  width: 64px;
+  height: 64px;
   margin-right: 20px;
+  border-radius: 5px;
 }
 
 .track-details {
@@ -130,26 +164,53 @@ code {
 }
 
 .track-name {
-  font-size: 18px;
-  font-weight: bold;
-  color: #000;
-  margin-bottom: 5px;
+  font-size: 1.2em;
+  color: #ffffff;
 }
 
 .artist-name {
-  font-size: 16px;
-  color: #666;
-  margin-bottom: 5px;
+  color: #aaaaaa;
 }
 
 .listen-now {
-  padding: 5px 10px;
-  background-color: #1DB954;
-  color: #fff;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  text-decoration: none;
   display: inline-block;
+  padding: 5px 10px;
+  background-color: #1db954;
+  color: #ffffff;
+  border-radius: 20px;
+  text-decoration: none;
+  font-size: 0.9em;
 }
 
+.listen-now:hover {
+  background-color: #17a74a;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  background-color: #1db954;
+}
+
+input[type="range"]::-moz-range-thumb {
+  background-color: #1db954;
+}
+
+input[type="range"]::-ms-thumb {
+  background-color: #1db954;
+}
+
+.search-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  background-color: #1db954;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: #17a74a;
+}
